Prevent conv title wrap with ellipses, but use condensed font
Should let you at least see two-person conversation names fairly
well (although we could also use first names in such cases, or
at least in the N > 2 case)

--- a/app/css/main.less
+++ b/app/css/main.less
@@ -108,7 +108,12 @@ ul#conversations {
         }
 
         .name {
+            .roboto-condensed();
+            
             font-size: 12pt; 
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
 
         .preview {
